[project]
name = "simulation"
version = "0.1.0"
description = ""
authors = [
    {name = "João Gabriel",email = "joaogabriel.sc99@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.4.6,<3.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
